@@ -1,3 +1,8 @@
+2012-09-25
+
+	* src/summaryview.c: summary_button_pressed(): fixed long-standing
+	  drag begin bug on IMAP folders (#93).
+
 2012-09-13
 
 	* sylpheed.spec.in: fixed build on x86_64 platform.
